--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,14 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "cookie": "^0.4.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.15",
+    "parser": "^0.1.4",
     "pg": "^8.7.1"
   }
 }
