--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
